[package]
name = "try-tlsn-alpha-8"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "1.3" }
http-body-util = { version = "0.1" }
hyper = { version = "1.1" }
hyper-util = { version = "0.1" }
serde_json = { version = "1.0" }
tokio = { version = "1.38", features = ["macros"] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "425614e" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.8" }
